Docs: Updated swagger docs
